--- a/CarWashing/NewBusinessCell(重写cell)/JackMerListCell.xib
+++ b/CarWashing/NewBusinessCell(重写cell)/JackMerListCell.xib
@@ -34,7 +34,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="测试商家名称名字超长的" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y2j-Sp-AUK">
-                        <rect key="frame" x="120" y="15" width="191" height="21"/>
+                        <rect key="frame" x="120" y="15" width="190" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -69,17 +69,11 @@
                         <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="三美容店" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="on1-hS-eZl">
-                        <rect key="frame" x="314" y="17" width="51" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="51" id="MPf-nA-4qp"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.52549019607843139" green="0.52549019607843139" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123.5km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bt3-fK-YWN">
-                        <rect key="frame" x="324.5" y="37" width="40.5" height="12"/>
+                        <rect key="frame" x="320" y="19.5" width="45" height="12"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="45" id="JIX-tK-tGp"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.52549019607843139" green="0.52549019607843139" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -93,9 +87,16 @@
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5dk-Xg-Nub">
                         <rect key="frame" x="0.0" y="134" width="375" height="0.5"/>
-                        <color key="backgroundColor" red="0.92549019607843142" green="0.92549019607843142" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="0.5" id="1tx-GT-5EH"/>
+                            <constraint firstAttribute="height" constant="1" id="1tx-GT-5EH"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cR4-Be-RNv">
+                        <rect key="frame" x="118" y="94" width="247" height="30"/>
+                        <color key="backgroundColor" red="0.40000000600000002" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="ESB-RW-wZC"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -103,15 +104,14 @@
                     <constraint firstItem="7zA-6I-Ffp" firstAttribute="top" secondItem="Abh-6X-GyC" secondAttribute="bottom" constant="5" id="1PU-c1-I6f"/>
                     <constraint firstItem="yGn-Lb-RbD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="120" id="4OB-QB-dA3"/>
                     <constraint firstItem="Abh-6X-GyC" firstAttribute="top" secondItem="Y2j-Sp-AUK" secondAttribute="bottom" constant="5" id="CHA-Uj-29L"/>
-                    <constraint firstItem="on1-hS-eZl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="G8o-Mf-zaP"/>
+                    <constraint firstItem="bt3-fK-YWN" firstAttribute="centerY" secondItem="Y2j-Sp-AUK" secondAttribute="centerY" id="CRC-dK-2bB"/>
+                    <constraint firstAttribute="trailing" secondItem="cR4-Be-RNv" secondAttribute="trailing" constant="10" id="G9N-cM-Akx"/>
+                    <constraint firstItem="cR4-Be-RNv" firstAttribute="top" secondItem="yGn-Lb-RbD" secondAttribute="bottom" constant="8" id="HVw-kO-t9H"/>
                     <constraint firstAttribute="trailing" secondItem="bt3-fK-YWN" secondAttribute="trailing" constant="10" id="IC8-7z-wSH"/>
                     <constraint firstItem="sbI-Sz-aAM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="95" id="IdR-Ka-LbQ"/>
-                    <constraint firstItem="on1-hS-eZl" firstAttribute="leading" secondItem="Y2j-Sp-AUK" secondAttribute="trailing" constant="3" id="Il5-UR-z3E"/>
                     <constraint firstItem="GnO-FG-R5B" firstAttribute="leading" secondItem="Zl2-jg-Kdn" secondAttribute="trailing" constant="5" id="NhU-3H-daN"/>
                     <constraint firstItem="Tc0-yv-889" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Nl3-d6-U0H"/>
                     <constraint firstItem="7zA-6I-Ffp" firstAttribute="leading" secondItem="Zl2-jg-Kdn" secondAttribute="trailing" constant="60" id="UOC-RM-dD4"/>
-                    <constraint firstAttribute="trailing" secondItem="on1-hS-eZl" secondAttribute="trailing" constant="10" id="Wqa-vP-i83"/>
-                    <constraint firstItem="bt3-fK-YWN" firstAttribute="top" secondItem="on1-hS-eZl" secondAttribute="bottom" constant="5" id="X7X-mu-mDD"/>
                     <constraint firstAttribute="bottom" secondItem="5dk-Xg-Nub" secondAttribute="bottom" id="bmH-Ru-Sl6"/>
                     <constraint firstItem="Zl2-jg-Kdn" firstAttribute="leading" secondItem="Tc0-yv-889" secondAttribute="trailing" constant="10" id="c8v-rg-36Q"/>
                     <constraint firstItem="5dk-Xg-Nub" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eSA-cv-bYR"/>
@@ -119,6 +119,7 @@
                     <constraint firstAttribute="trailing" secondItem="5dk-Xg-Nub" secondAttribute="trailing" id="jBf-H3-xGZ"/>
                     <constraint firstAttribute="trailing" secondItem="yGn-Lb-RbD" secondAttribute="trailing" constant="65" id="nmx-eZ-YBB"/>
                     <constraint firstItem="sbI-Sz-aAM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="onl-si-oYa"/>
+                    <constraint firstItem="cR4-Be-RNv" firstAttribute="leading" secondItem="Tc0-yv-889" secondAttribute="trailing" constant="8" id="qbF-52-Qso"/>
                     <constraint firstItem="Y2j-Sp-AUK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="qsA-J6-Nuu"/>
                     <constraint firstItem="yGn-Lb-RbD" firstAttribute="top" secondItem="Zl2-jg-Kdn" secondAttribute="bottom" constant="9" id="rMC-pr-gOL"/>
                     <constraint firstItem="Y2j-Sp-AUK" firstAttribute="leading" secondItem="Tc0-yv-889" secondAttribute="trailing" constant="10" id="rfV-YS-pKo"/>
@@ -128,16 +129,17 @@
                     <constraint firstItem="Zl2-jg-Kdn" firstAttribute="top" secondItem="Abh-6X-GyC" secondAttribute="bottom" constant="5" id="wTX-tW-d4T"/>
                     <constraint firstItem="Mkl-vm-qQe" firstAttribute="top" secondItem="Abh-6X-GyC" secondAttribute="bottom" constant="5" id="wVS-w1-HNf"/>
                     <constraint firstItem="Mkl-vm-qQe" firstAttribute="leading" secondItem="7zA-6I-Ffp" secondAttribute="trailing" constant="5" id="yAF-fJ-Un9"/>
+                    <constraint firstItem="bt3-fK-YWN" firstAttribute="leading" secondItem="Y2j-Sp-AUK" secondAttribute="trailing" constant="10" id="yup-GL-dqa"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="DistanceLabelJackCell" destination="bt3-fK-YWN" id="Jf8-lP-2eq"/>
                 <outlet property="MerAdressLabelJackCell" destination="Abh-6X-GyC" id="VQb-5i-tfu"/>
+                <outlet property="MerFlagBase" destination="cR4-Be-RNv" id="7ax-aE-JgY"/>
                 <outlet property="MerImageJackCell" destination="Tc0-yv-889" id="g2S-1p-x3a"/>
                 <outlet property="MerTitleLabelJackCell" destination="Y2j-Sp-AUK" id="lyn-yA-YfQ"/>
                 <outlet property="MerTypeImageJackCell" destination="sbI-Sz-aAM" id="9O1-vu-gIc"/>
-                <outlet property="MerTypeLableJackMerCell" destination="on1-hS-eZl" id="Ksl-Bc-CfK"/>
                 <outlet property="ScoreLabelMerCell" destination="GnO-FG-R5B" id="mL6-vF-PWe"/>
                 <outlet property="SerNumLableMerCell" destination="Mkl-vm-qQe" id="umy-Nt-MuS"/>
             </connections>
